# open-llms-class-csbl

./: .env  README.md  background_install_models.py  cleanup.sh  delete_model.py  main.py  pyproject.toml  quick_start_terrarium.sh  requirements.txt
.devcontainer/: devcontainer.json
inputs/: OPENME_LAST.txt  README.txt  TREASURE_HUNT.txt
openllms/: core.py  toolbelt.py
